fix: add z-index

--- a/src/components/chatBotButton/style.css
+++ b/src/components/chatBotButton/style.css
@@ -7,6 +7,7 @@
   align-items: flex-end;
   gap: 10px;
   max-height: 100vh;
+  z-index: 20000000000000000;
 }
 .circle_button {
   width: 65px;
